footer fix 3 - give the scrollbar dynamic vh

--- a/src/design/templates/global-layout.scss
+++ b/src/design/templates/global-layout.scss
@@ -1,7 +1,7 @@
 .container-grid-rows {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: 100svh;
+  min-height: 100dvh;
 }
 
 .container-margin {
